event binding and value passing

--- a/test-app/src/app/server/server.component.html
+++ b/test-app/src/app/server/server.component.html
@@ -2,4 +2,4 @@
 {
     backgroundColor:getColorOnStatus(),
     color: getServerStatus() === 'offline'? 'white': 'black'
-}">Server ID: {{serverName}} is {{getServerStatus()}}</p>
+}">Server ID: {{server.name}} is {{getServerStatus()}}</p>
