--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -2,10 +2,10 @@
 <div class="container">
     <div class="row">
         <div class='col-md-4 left-control'>
-            <app-add-server></app-add-server>
+            <app-add-server (serverCreated)="onAddServer($event)"></app-add-server>
         </div>
         <div class='col-md-6 right-control col-offset-2'>
-            <app-servers></app-servers>
+            <app-server *ngFor="let server of servers" [server]="server"></app-server>
         </div>
     </div>
 </div>
