--- a/test-app/src/app/servers/servers.component.html
+++ b/test-app/src/app/servers/servers.component.html
@@ -1,3 +1,3 @@
 
-<app-server *ngFor="let server of servers"></app-server>
+<app-server *ngFor="let server of servers" [server]="server"></app-server>
 <app-warning-alert></app-warning-alert>
