--- a/test-app/src/app/server/server.component.html
+++ b/test-app/src/app/server/server.component.html
@@ -3,3 +3,4 @@
     backgroundColor:getColorOnStatus(),
     color: getServerStatus() === 'offline'? 'white': 'black'
 }">Server ID: {{server.name}} is {{getServerStatus()}}</p>
+<ng-content></ng-content>
