--- a/test-app/src/app/server/server.component.css
+++ b/test-app/src/app/server/server.component.css
@@ -2,5 +2,7 @@ p {
     color: cornflowerblue;
     padding: 10px;
     background-color: cornsilk;
-    border: 1px solid blue;
+    border: 2px solid blue;
+    box-shadow: black;
+    text-shadow: blueviolet;
 }
