--- a/recipe-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/recipe-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,7 +1,7 @@
 <a href="#" class="list-group-item clearfix" (click)="onClickRecipe()">
             <div class="pull-left">
                 <h4 class="list-group-item-heading">{{recipe.name}}</h4>
-                <p class="list-group-item-text">{{recipe.description}}</p>
+                <p class="list-group-item-text" appBasicHeighliter>{{recipe.description}}</p>
             </div>
             <span class="pull-right">
                 <img 
