--- a/recipe-app/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/recipe-app/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-xs-12">
         <app-recipe-item  *ngFor="let recipe of recipes" 
-        [recipe]="recipe" (recipeClick)="onSelectRecipe($event)"></app-recipe-item>
+        [recipe]="recipe"></app-recipe-item>
     </div>
 </div>
 
