--- a/routing-start/src/app/users/user/user.component.html
+++ b/routing-start/src/app/users/user/user.component.html
@@ -1,2 +1,4 @@
 <p>User with ID {{user.id}} loaded.</p>
 <p>User name is {{user.name}}</p>
+<input type="text" #name id="username">
+<button class="btn btn-primary" (click)="onClickCall()">call API</button>
