--- a/routing-start/src/app/servers/servers.component.html
+++ b/routing-start/src/app/servers/servers.component.html
@@ -2,12 +2,15 @@
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
       <a
-        href="#"
+      [routerLink]="['/servers', server.id, 'edit']"
+      [queryParams]="{allowEdit:1}"
+      [fragment]="'loading'"
         class="list-group-item"
         *ngFor="let server of servers">
         {{ server.name }}
       </a>
     </div>
+    <button class="btn btn-primary" (click)="onServerClick()">Users</button>
   </div>
   <div class="col-xs-12 col-sm-4">
     <app-edit-server></app-edit-server>
