--- a/routing-start/src/app/servers/servers.component.html
+++ b/routing-start/src/app/servers/servers.component.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
       <a
-      [routerLink]="['/servers', server.id, 'edit']"
+      [routerLink]="['/servers', server.id]"
       [queryParams]="{allowEdit:1}"
       [fragment]="'loading'"
         class="list-group-item"
@@ -13,9 +13,10 @@
     <button class="btn btn-primary" (click)="onServerClick()">Users</button>
   </div>
   <div class="col-xs-12 col-sm-4">
-    <app-edit-server></app-edit-server>
+    <router-outlet></router-outlet>
+    <!-- <app-edit-server></app-edit-server>
     <hr>
-    <app-server></app-server>
+    <app-server></app-server> -->
   </div>
 </div>
 
