--- a/recipe-app/src/app/app.component.html
+++ b/recipe-app/src/app/app.component.html
@@ -1,6 +1,9 @@
 <app-header (featureSelector)="onNavigate($event)"></app-header>
 <div class="container">
-  <app-recipes *ngIf="loadedFeature === 'recipes'"></app-recipes>
-  <app-shopping-list *ngIf="loadedFeature !== 'recipes'"></app-shopping-list>
+  <div class="row">
+    <div class="col-md-12">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
 
