--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form (ngSubmit)="onSubmit(f)" #f="ngForm">
+      <form (ngSubmit)="onSubmit()" #f="ngForm">
         <div id="user-data">
           <div class="form-group">
             <label for="username">Username</label>
@@ -9,7 +9,8 @@
              id="username"
             class="form-control"
             ngModel
-            name="username">
+            name="username"
+            required>
           </div>
           <button class="btn btn-default" type="button">Suggest an Username</button>
           <div class="form-group">
@@ -17,8 +18,12 @@
             <input type="email" id="email" 
             class="form-control"
             ngModel
-            name="email">
+            name="email"
+            required
+            email
+            #email="ngModel">
           </div>
+          <p *ngIf="!email.valid && email.touched">Please enter a value!</p>
         </div>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
@@ -29,7 +34,8 @@
             <option value="teacher">Your first teacher?</option>
           </select>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <button class="btn btn-primary" type="submit"
+        [disabled]="!f.valid">Submit</button>
       </form>
     </div>
   </div>
